cmake_minimum_required(VERSION 3.5)
project(benchmark)
set(SOURCES_NETWORK ../source/network/tcpclientsocket.cpp ../source/network/tcpsocket.cpp ../source/network/common.cpp)
IF(WIN32)
    set(SOURCES_NETWORK ${SOURCES_NETWORK} ../source/network/wsa.cpp)
ENDIF()
set(SOURCES_THREADS ../source/threads/threadpool.cpp)
set(SOURCES_UTILS ../source/utils/strings.cpp ../source/utils/exception.cpp ../source/utils/charset.cpp ../source/utils/timer.cpp)
set(SOURCES ${SOURCES_NETWORK} ${SOURCES_THREADS} ${SOURCES_UTILS} main.cpp)
include_directories(. ../source)
add_definitions(-std=c++11)
add_executable(benchmark ${SOURCES})
IF(WIN32)
    target_link_libraries(benchmark ws2_32)
ELSEIF(UNIX)
    target_link_libraries(benchmark pthread)
ENDIF()
